# Webserver

./: .gitignore  CMakeLists.txt  Download1  LICENSE  Makefile  README.md  Response.cpp  Response.h  Server.cpp  Server.hpp  a.out  location.cpp  location.hpp  macStart.sh  main.cpp  parser.cpp  path.txt  request.cpp  request.hpp  run.sh  runserver.sh  runtest.sh  server.cpp  server.hpp  serverCluster.cpp  testResponse.cpp  test_function.cpp  testmain.cpp  ubuntuStart.sh  webserv.hpp  webserv.out
.github/workflows/: request.yml  response.yml
Tests/: CatchMain.cpp  response_main.cpp
answers/: request_answers.txt  response_answers.txt
catch/: 010-TestCase.cpp  010-TestFunction.cpp  CatchMain.cpp  Makefile  README.md  a.out  catch_main.cpp  catch_test  path.txt  test_catch.cpp  test_request.cpp  test_response.cpp
cgi-bin/: php_script.php  php_tester.php  printenv.bla  test.pl
configfiles/: .htpasswd  test.conf
configs/: basic.conf  doublePort.conf  tester_OS_X.conf  tester_Ubuntu.conf
html_pages/: 204.html  400.html  403.html  404.html  405.html  503.html  auto_error.html  index.html  index1.html  index2.html
html_pages/Downloads/: .file_for_git
srcs/: Response.cpp  Response.hpp  ResponseHeader.cpp  ResponseHeader.hpp  location.cpp  main.cpp  parser.cpp  request.cpp  request.hpp  server.cpp  server.hpp  serverCluster.cpp  serverCluster.hpp  utils.cpp  utils.hpp  webserv.cpp  webserv.hpp
srcs/CGI/: CGI.cpp  CGI.hpp
srcs/Cluster/: serverCluster.cpp  serverCluster.hpp
srcs/Request/: a.out  main.cpp  request.cpp  request.hpp
srcs/Response/: Response.cpp  Response.hpp  ResponseHeader.cpp  ResponseHeader.hpp  getPath.cpp  getPath.hpp  responseHeader.cpp  responseHeader.hpp
srcs/Server/: connection.cpp  connection.hpp  location.cpp  location.hpp  parser.cpp  parser.hpp  server.cpp  server.hpp  serverBasic.cpp  serverUtility.cpp
srcs/Utils/: Base64.cpp  Base64.hpp  defines.hpp  utils.cpp  utils.hpp
test_files/: client.cpp
test_files/conf/: webserv.conf
test_files/request/get/: GET_example
test_mac/: mac.conf
test_us/: client.cpp
test_us/request/get/: GET_example
tests/: response_main.cpp
untitled/: CMakeLists.txt  test.cpp
